src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Accounting_Instructions__c</fullName>
        <label>Accounting Instructions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Activated_Portal_Account__c</fullName>
        <formula>IF( ISBLANK(ptc_password__c) , False, True)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activated Portal Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_Placements__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this contact is an adjuster or landlord and is on any active placements this field will be checked</description>
        <label>Active Placements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adjuster_Identification_Code__c</fullName>
        <label>Adjuster Identification Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjuster_Survey_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adjuster Survey Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adjuster_Survey_URL__c</fullName>
        <formula>IF($Organization.Id = &apos;00D0R0000000My4&apos;, &apos;https://www.getfeedback.com/r/yDFXJ4II&apos;, &apos;https://www.getfeedback.com/r/AN0uwcNb&apos;)</formula>
        <label>Adjuster Survey URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Phone_Customn__c</fullName>
        <label>Alternate Phone_Custom</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Alternate_Phone_Instructions__c</fullName>
        <label>Alternate Phone Instructions</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_of_Responsibility__c</fullName>
        <label>Area of Responsibility</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Last_Deal__c</fullName>
        <label>Assigned To Last Deal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assistant_Custom__c</fullName>
        <label>Assistant_Custom</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ave_Days_to_Pay__c</fullName>
        <label>Ave Days to Pay</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ave_Length_of_Stay__c</fullName>
        <label>Ave Length of Stay</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Profit__c</fullName>
        <label>Average Profit</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Communication_Preferences__c</fullName>
        <description>Used for Houston to determine how quotes and invoices should be sent to the adjuster.</description>
        <label>Billing Communication Preferences</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Email_Instructions__c</fullName>
        <label>Billing Email Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Email__c</fullName>
        <label>Billing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Billing_Fax__c</fullName>
        <label>Billing Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Billing_Preference__c</fullName>
        <label>Billing Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Entire Amount</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>3 Months</fullName>
                </value>
                <value>
                    <fullName>6 Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Birthdate_Custom__c</fullName>
        <label>Birthdate Custom</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CC_Billing_Email__c</fullName>
        <label>CC Billing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CC_Email__c</fullName>
        <label>CC Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Called_In_By_Last_Deal__c</fullName>
        <label>Called In By Last Deal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Claim__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Claims_Document_Email__c</fullName>
        <label>Claims Document Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Claims_Document_Fax__c</fullName>
        <label>Claims Document Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Claims_in_Past_Year__c</fullName>
        <label># Claims in Past Year</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Collateral_Not_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This person does not accept collateral (when checked)</inlineHelpText>
        <label>Collateral Not Accepted by Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Communication_Preference_Notes_Length__c</fullName>
        <label>Communication Preference Notes Length</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Communication_Preference_Notes__c</fullName>
        <label>Communication Preference Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Communication_Preferences__c</fullName>
        <label>Communication Preferences</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Primary Phone</fullName>
                </value>
                <value>
                    <fullName>Direct Phone</fullName>
                </value>
                <value>
                    <fullName>Mobile Phone</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_s__c</fullName>
        <label>Competitor(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Current_Temp_Housing_Provider__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ALE</fullName>
                </value>
                <value>
                    <fullName>DMA</fullName>
                </value>
                <value>
                    <fullName>Klein &amp; Co</fullName>
                </value>
                <value>
                    <fullName>Execustay</fullName>
                </value>
                <value>
                    <fullName>Oakwood</fullName>
                </value>
                <value>
                    <fullName>Assured</fullName>
                </value>
                <value>
                    <fullName>Temp Accom</fullName>
                </value>
                <value>
                    <fullName>Housing HQ</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>BridgeStreet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consolidated_Hotel_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consolidated Hotel Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Temp_Housing_Provider__c</fullName>
        <label>Current Temp Housing Provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Self/Policyholder</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <description>Customer ID used for accounting export.</description>
        <label>Customer ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Deal__c</fullName>
        <label>Date of Last Deal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Difference_between_two_dates__c</fullName>
        <formula>TODAY()- Max_of_two_dates__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Difference between two dates</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Call Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Email Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Mail Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Date_2_days__c</fullName>
        <formula>CASE( MOD( DATEVALUE( LastModifiedDate) - DATE( 1900, 1, 7 ), 7 ), 
5, LastModifiedDate + 2 + 2, 
6, LastModifiedDate + 2 + 1, 
LastModifiedDate + 2 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date 2 days</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <formula>CASE( MOD( DATEVALUE( LastModifiedDate) - DATE( 1900, 1, 7 ), 7 ),
  5, LastModifiedDate + 1 + 2, 
  6, LastModifiedDate + 1 + 1,
  LastModifiedDate + 1
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Instructions__c</fullName>
        <label>Email Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FRV_s__c</fullName>
        <label># FRV’s</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Cliam_Relationship_Manager__c</fullName>
        <label>First Cliam Relationship Manager</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Invoice__c</fullName>
        <description>Billing adjuster&apos;s preference for the first invoice. Changed from Ongoing Billing 10/23/2008</description>
        <label>First Invoice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Entire Amount</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>3 Months</fullName>
                </value>
                <value>
                    <fullName>6 Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Food_Not_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This person does not accept food (when checked)</inlineHelpText>
        <label>Food Not Accepted by Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gifts_Not_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This person does not accept gifts (when checked)</inlineHelpText>
        <label>Gifts Not Accepted by Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grant_Portal_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Grant Portal Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hotel_Reservation_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hotel Reservation Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hotels_Pending_Check_Out_within_72_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hotels Pending Check Out within 72 Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hotels__c</fullName>
        <label># Hotels</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Housing_Claims_Pending_Move_Out_45_Days__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Housing Claims Pending Move Out 45 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Housing_Claims_Pending_Move_Out_7_Days__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Housing Claims Pending Move Out 7 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Housing_Move_In_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Housing Move In Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Housing_Prop_Accept_Decline_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Housing Prop Accept/Decline Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Housing_Property_Located_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Housing Property Located Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Housing__c</fullName>
        <label># Housing</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_From_Folio__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice From Folio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Ghost_Adjuster_Task__c</fullName>
        <formula>IF(((TODAY()- Max_of_two_dates__c) == 181),true,false)</formula>
        <label>Is Ghost Adjuster Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Role__c</fullName>
        <label>Job Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Adjuster</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Deal1__c</fullName>
        <formula>&quot;Yes&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Deal1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Hotel_Only_Claim__c</fullName>
        <description>Last called in hotel claim</description>
        <inlineHelpText>Last called in hotel claim</inlineHelpText>
        <label>Last Hotel Only Claim</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Housing_Claim__c</fullName>
        <description>Last called in housing claim</description>
        <inlineHelpText>Last called in housing claim</inlineHelpText>
        <label>Last Housing Claim</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Survey_Sent__c</fullName>
        <label>Last Survey Sent</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Conversion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Conversion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Description__c</fullName>
        <label>Lead Source Description</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LeadSource</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ACE Claims</fullName>
                </value>
                <value>
                    <fullName>AICA Education</fullName>
                </value>
                <value>
                    <fullName>All-Industry Day</fullName>
                </value>
                <value>
                    <fullName>Association Meeting</fullName>
                </value>
                <value>
                    <fullName>CCC</fullName>
                </value>
                <value>
                    <fullName>CCNC</fullName>
                </value>
                <value>
                    <fullName>FAPIA</fullName>
                </value>
                <value>
                    <fullName>Golf Event</fullName>
                </value>
                <value>
                    <fullName>Kentucky Claims</fullName>
                </value>
                <value>
                    <fullName>NAIIA</fullName>
                </value>
                <value>
                    <fullName>NAPIA</fullName>
                </value>
                <value>
                    <fullName>NLA Trade Fair</fullName>
                </value>
                <value>
                    <fullName>OCAA Symposium</fullName>
                </value>
                <value>
                    <fullName>PLRB Claims</fullName>
                </value>
                <value>
                    <fullName>PLRB Regional</fullName>
                </value>
                <value>
                    <fullName>Social Event</fullName>
                </value>
                <value>
                    <fullName>Unit Meeting</fullName>
                </value>
                <value>
                    <fullName>Windstorm</fullName>
                </value>
                <value>
                    <fullName>Disaster Assistance Center</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manual_Owner_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Owner Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manual_Recurring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Recurring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Markup_Rule__c</fullName>
        <label>Markup Rule</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_of_two_dates__c</fullName>
        <description>IF(Assigned_To_Last_Deal__c &lt; Called_In_By_Last_Deal__c ,Called_In_By_Last_Deal__c,Assigned_To_Last_Deal__c )</description>
        <formula>IF(
    AND(
        ISBLANK(Assigned_To_Last_Deal__c),
        ISBLANK(Called_In_By_Last_Deal__c)     
    ),
    NULL,
    DATE(1900, 01, 01) +
    MAX(
        BLANKVALUE(
            Assigned_To_Last_Deal__c, 
            DATE(1900, 01, 01)
        ) - DATE(1900, 01, 01),
        BLANKVALUE(
            Called_In_By_Last_Deal__c,
            DATE(1900, 01, 01)
        ) - DATE(1900, 01, 01)  
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max of two dates</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Migration_CustomerID__c</fullName>
        <description>Used for migrating the accountid from the accounting system</description>
        <label>Migration_CustomerID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_PTID__c</fullName>
        <description>Fields used for lookup to opportunity</description>
        <label>Migration_PTID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Migration_VendorID__c</fullName>
        <label>Migration_VendorID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Promotor_Score__c</fullName>
        <label>Net Promotor Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Task_Follow_Up_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Task Follow Up Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Deals_Total__c</fullName>
        <label>No. Deals Total</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No__c</fullName>
        <inlineHelpText>Number of deals in the last 12 months</inlineHelpText>
        <label>No. of Deals Last Year</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opt_Out_Notes__c</fullName>
        <label>Contact Opt Out Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_City_Custom__c</fullName>
        <label>Other City Custom</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Country_Custom__c</fullName>
        <label>Other Country Custom</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Source__c</fullName>
        <label>Other Source</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_State_Province_Custom__c</fullName>
        <label>Other State/Province Custom</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Street_Custom__c</fullName>
        <label>Other Street Custom</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Zip_Postal_Code_Custom__c</fullName>
        <label>Other Zip/Postal Code Custom</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Email__c</fullName>
        <description>Custom unique email field that populates the standard email field on this object</description>
        <label>Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Primary_Phone_Instructions__c</fullName>
        <label>Primary Phone Instructions</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating_Star__c</fullName>
        <formula>IMAGE( 
CASE(  Rating__c , 
&quot;1&quot;, &quot;/img/samples/stars_100.gif&quot;,
&quot;2&quot;, &quot;/img/samples/stars_200.gif&quot;,
&quot;3&quot;, &quot;/img/samples/stars_300.gif&quot;, 
&quot;4&quot;, &quot;/img/samples/stars_400.gif&quot;, 
&quot;5&quot;, &quot;/img/samples/stars_500.gif&quot;, 
&quot;/img/samples/stars_000.gif&quot;), 
&quot;rating&quot;)</formula>
        <label>Rating Star</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecordtypeName__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordtypeName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Red_Carpet_Club__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if the adjuster is in the red carpet club</inlineHelpText>
        <label>Red Carpet Club</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Refered_By__c</fullName>
        <label>Refered By</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refundable_Deposit_Returned__c</fullName>
        <label>Refundable Deposit Returned</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>To Company</fullName>
                </value>
                <value>
                    <fullName>To Policyholder</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resend_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resend Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retention_Territory__c</fullName>
        <formula>IF(LEN(OtherState)=0, 0, 

IF(AND(CONTAINS(&quot;CA&quot;, OtherState) ,CONTAINS(&quot;Allstate:California Casualty:Mercury Insurance:Safeco Insurance&quot;, Account.Name)), 15, 

IF(CONTAINS(&quot;AIG Insurance:Chartis Insurance:Lexington Insurance Company:Nationwide Private Client:PURE:Ace Private Risk Services:Chubb Insurance:Fireman&apos;s Fund Insurance Co.:National General Premier&quot;, Account.Name), 95, 


IF(CONTAINS(&quot;AZ:CA&quot;, OtherState), 25, 
IF(CONTAINS(&quot;WA:OR:ID:AK:HI:NV:UT:NM:CO:WY:MT&quot;, OtherState), 35, 
IF(CONTAINS(&quot;TX:OK:KS:NE:MO:AR:LA&quot;, OtherState), 45, 
IF(CONTAINS(&quot;ND:SD:MN:IA:WI:IL:MI:IN:OH:NU:MB:ON:QC:NL:YT:NT:BC:AB:SK&quot;, OtherState), 55, 
IF(CONTAINS(&quot;MS:AL:GA:SC:NC:FL&quot;, OtherState), 65, 
IF(CONTAINS(&quot;TN:KY:WV:VA:DC:MD:DE:NJ:PA:NY:CT:RI:MA:NH:VT:ME&quot;, OtherState), 75, 0)))))))))</formula>
        <label>Retention Territory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMS_Related_Object__c</fullName>
        <label>SMS Related Object</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesLogix_Contact_ID__c</fullName>
        <label>SalesLogix Contact ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesLogix_Contact_Record_Owner__c</fullName>
        <label>SalesLogix Contact Record Owner</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Status__c</fullName>
        <formula>IF( OR( TODAY() - Called_In_By_Last_Deal__c &lt;= 180  , TODAY() - Assigned_To_Last_Deal__c &lt;= 180), &apos;Actual Customer&apos;, &apos;Target Customer&apos;)</formula>
        <label>Sales Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Territory__c</fullName>
        <formula>IF(LEN(OtherState)=0, 0,
IF(CONTAINS(&quot;AK:HI:CA:AZ:NV:OR:WA:ID:MT:WY:UT:CO:NM&quot;, OtherState), 10, 
IF(CONTAINS(&quot;TX:OK:KS:MO:NE:SD:ND:MN:IA:WI:IL:MI:OH:IN&quot;, OtherState), 20, 
IF(CONTAINS(&quot;AR:LA:MS:AL:GA:SC:NC:KY:TN:FL&quot;, OtherState), 30, 
IF(CONTAINS(&quot;VA:WV:PA:NY:DC:MD:DE:NJ:CT:RI:MA:NH:VT:ME&quot;,OtherState), 40, 
IF(CONTAINS(&quot;NU:MB:ON:QC:NL:YT:NT:BC:AB:SK&quot;, OtherState), 50,0))))))</formula>
        <label>Sales Territory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Satisfaction_Score__c</fullName>
        <label>Satisfaction Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Secondary_Phone_Instructions__c</fullName>
        <label>Secondary Phone Instructions</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Phone__c</fullName>
        <label>Secondary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Send_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Size_of_Loss__c</fullName>
        <label>Size of Loss</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Mid</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Invoice_Style__c</fullName>
        <label>Special Invoice Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All items broken out on same invoice</fullName>
                </value>
                <value>
                    <fullName>Mark-up on separate invoice</fullName>
                </value>
                <value>
                    <fullName>Mark-up on separate line, same invoice</fullName>
                </value>
                <value>
                    <fullName>Nationwide</fullName>
                </value>
                <value>
                    <fullName>Travelers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Active - potential of doing business
Inactive - not able to do business
No Longer with Company</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>No Longer with Company</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Name__c</fullName>
        <formula>&quot;Adjuster Satisfaction Survey &quot; &amp; TEXT(MONTH(TODAY()))+&quot;/&quot; +TEXT(DAY(TODAY()))+&quot;/&quot; +TEXT(YEAR(TODAY()))</formula>
        <label>Survey Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Returned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Survey Returned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Survey Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Temp_Phone__c</fullName>
        <description>Phone Number for Temporary Placement</description>
        <inlineHelpText>Phone Number for Temporary Placement</inlineHelpText>
        <label>Temp Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Times_on_Rent_Hold__c</fullName>
        <label># Times on Rent Hold</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Claims__c</fullName>
        <label>Total # Claims</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_FRV_Claims__c</fullName>
        <inlineHelpText>Total called in FRV claims</inlineHelpText>
        <label>Total FRV Claims</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>